--- a/TravelBook/Info.plist
+++ b/TravelBook/Info.plist
@@ -21,5 +21,9 @@
 			</array>
 		</dict>
 	</dict>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>to get your location</string>
+	<key>CFBundleIdentifier</key>
+	<string></string>
 </dict>
 </plist>
